[tool.poetry]
name = "sae"
version = "0.1.0"
description = "This poetry setup was not working with `poetry install` on RunPod.io GPUs, so I just used `pip install -e .` in practice."
authors = ["Arthur Conmy"]
readme = "README.md"
packages = [{include = "sae"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13" # For dependency crap ... ideally support Python 3.8
torch = "^1.13.1, <3.0"
ruff = "^0.1.3"
einops = "^0.7.0"
transformer-lens = "^1.10.0"
wandb = "^0.15.12"
plotly = "^5.18.0"
circuitsvis = "^1.43.1"
line_profiler = "^4.1.1"
matplotlib = "^3.8.1"
ipython = "^8.14.0"
datasets = "^2.14.6"
ipywidgets = "^8.1.1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
